# ckan-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
ckan_client/: __init__.py  base_object.py  client.py  organization.py  package.py  resource.py
ckan_overlay/: client.py
tests/: conftest.py  help_data.json  organization_metadata.json  package_metadata.json  resource_metadata.json  test_base_object.py  test_client.py  test_organization.py  test_package.py  test_resource.py
