[project]
name = "ckan-client"
dynamic = ["version"]
description = "Higher level overlay around `ckanapi`"
authors = []
dependencies = [
    "ckanapi>=4.11,5",
]
requires-python = ">=3.10,<3.15"
license = "MIT"
readme = "README.md"
keywords = ["ckan"]

[dependency-groups]
dev = [
    "niquests-mock>=0.4.0,<1",
    "pytest>=8.0.0,<9",
    "ruff>=0.11.2",
]

[project.urls]
Source = "https://github.com/Pierlou/ckan-client"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
csv_detective = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
lint = { extend-select = ["I"] } # ["I"] is to also sort imports with an isort rule
line-length = 100
